test/benchmark/higress/ingresses/benchmark-higress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: benchmark-higress
  namespace: higress-system
  annotations:
    higress.io/destination: benchmark-mock.static:80
spec:
  ingressClassName: higress
  rules:
    - host: mock.benchmark.local
      http:
        paths:
          - path: /v1
            pathType: Prefix
            backend:
              resource:
                apiGroup: networking.higress.io
                kind: McpBridge
                name: default
